--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,8 +14,6 @@
     <string name="app_name">Foodie Buddies</string>
 
     <string name="button_accept">Accept</string>
-    <string name="button_addCategory">Add a category</string>
-    <string name="button_addItem">Add an item</string>
     <string name="button_addProfilePicture">Add a profile picture</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_changeImage">Gallery</string>
@@ -57,6 +55,7 @@
     <string name="desc_shop">"add to groceries" button</string>
     <string name="desc_takePicture">take picture</string>
     <string name="desc_textFieldIcon">text field icon</string>
+    <string name="desc_userPic">picture chosen by user</string>
 
     <string name="diet_fish">Fish</string>
     <string name="diet_meat">Meat</string>
@@ -70,9 +69,13 @@
     <string name="dst_recipes">Recipes</string>
     <string name="dst_settings">Settings</string>
 
+    <string name="field_addCategory">Add a category</string>
+    <string name="field_addIngredient">Add an ingredient</string>
+    <string name="field_addItem">Add an item</string>
     <string name="field_bio">Bio</string>
     <string name="field_keywords">What are you searching for?</string>
     <string name="field_maxChar">max. %1$s characters</string>
+    <string name="field_recipeName">Enter your recipe name</string>
     <string name="field_username">Username</string>
 
     <string name="origin_american">American</string>
@@ -117,12 +120,16 @@
     <string name="title_account">Account</string>
     <string name="title_creator">Creator</string>
     <string name="title_diet">Diet</string>
+    <string name="title_editRecipe">Edit your recipe</string>
     <string name="title_filters">Filters</string>
+    <string name="title_foodPic">Picture of the food</string>
     <string name="title_fridge">My Fridge</string>
     <string name="title_groceries">Groceries list</string>
+    <string name="title_ingredients">Ingrédients</string>
     <string name="title_language">Language</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_origin">Origin</string>
+    <string name="title_recipeName">Recipe name</string>
     <string name="title_recipes">Recipes</string>
     <string name="title_settings">Settings</string>
     <string name="title_tag">Tags</string>
@@ -142,11 +149,11 @@
     <string name="txt_noRecipes">There are no recipes on the app for now!</string>
     <string name="txt_noResults">There are no recipes corresponding to those filters.</string>
     <string name="txt_numberRecipes">Total number of added recipes: %1$s</string>
+    <string name="txt_quantity">Quantity</string>
     <string name="txt_recipeCreator">Created by %1$s</string>
+    <string name="txt_recipeRequirements">Fields marked with a red asterisk are mandatory.</string>
     <string name="txt_systemDark">Dark</string>
     <string name="txt_systemDefault">System default</string>
     <string name="txt_systemLight">Light</string>
-    <string name="txt_recipeName">Recipe name</string>
-    <string name="field_recipeName">Enter your recipe name</string>
-    <string name="title_editRecipe">Edit your recipe</string>
+    <string name="txt_unit">Unit</string>
 </resources>
