--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,9 +74,11 @@
     <string name="field_addIngredient">Ajouter un ingrédient</string>
     <string name="field_addItem">Ajouter un article</string>
     <string name="field_bio">Bio</string>
+    <string name="field_ingredientName">Nom de l\'ingrédient</string>
     <string name="field_keywords">Qu\'est-ce que tu cherches ?</string>
     <string name="field_maxChar">max. %1$s caractères</string>
-    <string name="field_recipeName">Enter your recipe name</string>
+    <string name="field_none">-</string>
+    <string name="field_recipeName">Entre le nom de ta recette</string>
     <string name="field_username">Nom d\'utilisateur</string>
 
     <string name="origin_american">Américain</string>
@@ -121,16 +123,17 @@
     <string name="title_account">Compte</string>
     <string name="title_creator">Créateur</string>
     <string name="title_diet">Régime</string>
-    <string name="title_editRecipe">Edit your recipe</string>
+    <string name="title_editRecipe">Modifie ta recette</string>
     <string name="title_filters">Filtres</string>
     <string name="title_foodPic">Photo du plat</string>
     <string name="title_fridge">Mon Frigo</string>
     <string name="title_groceries">Liste de courses</string>
     <string name="title_ingredients">Ingrédients</string>
     <string name="title_language">Langue</string>
+    <string name="title_miscellaneous">Divers</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_origin">Origine</string>
-    <string name="title_recipeName">Recipe name</string>
+    <string name="title_recipeName">Nom de la recette</string>
     <string name="title_recipes">Recettes</string>
     <string name="title_settings">Paramètres</string>
     <string name="title_tag">Tags</string>
@@ -157,4 +160,18 @@
     <string name="txt_systemDefault">Thème par défault du système</string>
     <string name="txt_systemLight">Clair</string>
     <string name="txt_unit">Unité</string>
+
+    <string name="unit_bouquet">bouquet</string>
+    <string name="unit_cc">cc</string>
+    <string name="unit_cs">cs</string>
+    <string name="unit_de">dé</string>
+    <string name="unit_dl">dl</string>
+    <string name="unit_g">g</string>
+    <string name="unit_goutte">goutte</string>
+    <string name="unit_kg">kg</string>
+    <string name="unit_ml">ml</string>
+    <string name="unit_none">-</string>
+    <string name="unit_pin">pincée</string>
+    <string name="unit_sachet">sachet</string>
+    <string name="unit_tasse">tasse</string>
 </resources>
