--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <resources>
     <string name="alert_clearList">Are you sure you want to clear this list?\nThis action cannot be undone.</string>
+    <string name="alert_deleteRecipe">Are you sure you want to delete this recipe?\nThis action cannot be undone.</string>
     <string name="alert_deleteAccount">Are you sure you want to delete your account?\nThis cannot be undone.</string>
     <string name="alert_deleteCatFridge">Warning: this action will also delete this category and all its elements in \"Groceries list\"</string>
     <string name="alert_deleteCatGroceries">Warning: this action will also delete this category and all its elements in \"My Fridge\"</string>
@@ -197,4 +198,5 @@
     <string name="txt_person">person</string>
     <string name="txt_pieces">pieces</string>
     <string name="txt_piece">piece</string>
+    <string name="button_deleteRecipe">Delete the recipe</string>
 </resources>
